kubernetes/apps/cnpg-system/cloudnative-pg/networkpolicys/cnpg-system-cloudnative-operator-allow-eg-to-database-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-system-cloudnative-operator-allow-eg-to-database-ns
  namespace: cnpg-system
spec:
  podSelector:
    matchLabels:
      name: cloudnative-pg
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: database
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8000
