kubernetes/apps/cnpg-system/cloudnative-pg/networkpolicys/cnpg-system-cloudnative-operator-allow-ig-from-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-system-cloudnative-operator-allow-ig-from-prometheus
  namespace: cnpg-system
spec:
  podSelector:
    matchLabels:
      name: cloudnative-pg
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: observability
        podSelector:
          matchLabels:
            app.kubernetes.io/name: prometheus
      ports:
        - protocol: TCP
          port: 8080
